<resources>
    <string name="app_name">NetScan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="simple_desc">A simple network scanner</string>
    <string name="made_by">Made by Ander Granado</string>

    <string name="my_scans">My Scans</string>
    <string name="scan_direction">Scan Direction</string>
    <string name="other">Other</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_node_list">NodeListActivity</string>

    <string name="options">Options</string>
    <string name="scan_dir_ph">Enter IP adress or domain</string>
    <string name="scan">Scan</string>
    <string name="only_ping">Only Ping scan</string>
    <string name="scan_services">Scan services</string>
    <string name="get_host_extra_info">Get additional info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_scan_question">Cancel scan?</string>
    <string name="really_cancel_scan_question">Do you really want to cancel scan?</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="not_valid_ip_domain">Not valid IP or domain</string>
    <string name="no_internet">There is no Internet connection</string>
    <string name="no_wifi">WiFi is not enabled</string>
    <string name="title_activity_direction_info">DirectionInfoActivity</string>

    <string name="title_activity_direction_scan">Scan Direction</string>
    <string name="direction_scan_tab_text_1">Basic</string>
    <string name="direction_scan_tab_text_2">Services</string>
    <string name="direction_scan_tab_text_3">Extra</string>

    <string name="starting_scan">Starting scan&#8230;</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="scanned">Scanned&#33;</string>

    <string name="host">Host</string>
    <string name="no_host_at">"No host at that giver domain or IP"</string>

    <string name="hosts_scanned">Hosts scanned</string>
    <string name="hosts_up">Hosts Up</string>
    <string name="hosts_down">Hosts Down</string>
    <string name="total_time">Total Time</string>

    <string name="unknown">Unknown</string>

    <!-- If the order changes the ScanType enum needs to be changed -->
    <string-array name="scan_type">
        <item>Regular</item>
        <item>Ping</item>
        <item>Quick</item>
        <item>Full</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ip_address">IP address</string>
    <string name="hostname">Hostname</string>
    <string name="mac_address">MAC address</string>
    <string name="vendor">Vendor</string>

</resources>
