<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_scans"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/my_scans" />
        <item
            android:id="@+id/nav_scan_direction"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/scan_direction" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
