<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_content_margin"
    tools:context="com.andergranado.netscan.view.fragment.ExtraInfoFragment">

    <!-- TODO: Remake this fragment UI to fit Material Design conventions -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_section_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hosts_scanned"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

        <TextView
            android:id="@+id/scanned_hosts_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_section_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hosts_up"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

        <TextView
            android:id="@+id/scanned_hosts_num_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_section_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hosts_down"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

        <TextView
            android:id="@+id/scanned_hosts_num_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_section_padding">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_time"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

        <TextView
            android:id="@+id/scan_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    </LinearLayout>

</LinearLayout>
